--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -536,18 +536,27 @@ aside {
     height: 20px;
     margin-right: -50px;
 }
-
+.rank-title-wr a:hover {
+    color: #018465;
+    text-decoration: none;
+    font-weight: 900;
+}
 .rank-title {
     float: left;
     width: 60px;
-    height: 20px;
+    height: 50px;
     margin-right: 30px;
-    background: transparent url('../images/rank.png') no-repeat scroll 0% 0%;
-    text-indent: 60px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #3eb196;
+    font-family: 粗体, serif;
+    /*background: transparent url('../images/rank.png') no-repeat scroll 0% 0%;*/
+    /*text-indent: 60px;*/
     cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
 }
+
 
 .rank-title.default {
     background-position: -10px -97px;
@@ -998,7 +1007,7 @@ div.center {
 }
 
 .items {
-    font-size: 0px;
+    font-size: 0;
     list-style: outside none none;
     text-align: right;
     /*text-align-last: justify;*/
@@ -1016,6 +1025,7 @@ div.center {
     width: 200px;
     height: 265px;
     margin-bottom: 20px;
+    float: left;
     font-size: 12px;
 }
 
