--- a/WebContent/css/goods_detail.css
+++ b/WebContent/css/goods_detail.css
@@ -1,4 +1,4 @@
-/* ::::: http://hust.2shoujie.com/resource/css/init.css?v=201506100001 ::::: */
+
 
 html, body, div, header, footer, form, p, input, button, h1, h2, h3, h4, h5, h6, ul, li, img, textarea { margin: 0px; border: 0px none; padding: 0px; outline: medium none; }
 ul, li { list-style: outside none none; }
@@ -37,7 +37,7 @@ header { width: 100%; min-width: 960px; height: 120px; position: fixed; left: 0p
 .log-reg { position: absolute; right: 0px; top: 40px; }
 .button { float: left; width: 72px; height: 16px; margin: 0px 1px 0px 0px; padding: 8px 0px; border: 1px solid transparent; border-radius: 25px; transition: all 0.2s ease-in 0s; font-size: 1.33em; color: rgb(75, 191, 165); text-align: center; line-height: 16px; vertical-align: middle; cursor: pointer; }
 .button:hover { border-color: rgb(75, 191, 165); }
-footer { padding: 0px 0px 20px; background: rgb(247, 250, 249) url('../imgs/footer-bg.png') no-repeat scroll center bottom; }
+footer { padding: 0px 0px 20px; background: rgb(247, 250, 249) url('../images/footer-bg.png') no-repeat scroll center bottom; }
 .footer-tri { display: block; width: 100%; margin-bottom: 25px; }
 .links-wr li::before { content: "/"; font-size: 1.33em; color: rgb(102, 102, 102); line-height: 16px; position: absolute; left: 0px; bottom: -1px; }
 .links-wr li.first::before { content: ""; }
@@ -58,8 +58,8 @@ footer { padding: 0px 0px 20px; background: rgb(247, 250, 249) url('../imgs/foot
 .login-header, .reg-header { width: 100%; padding: 30px 0px; margin: 0px auto; background-color: rgb(63, 73, 91); }
 .reg-header { padding-bottom: 40px; }
 .login-logo { display: block; width: 80px; height: 80px; margin: 0px auto; }
-p.site-name { width: 110px; height: 21px; margin: 17px auto 0px; background: transparent url('../imgs/lr.png') no-repeat scroll 0px -120px; text-indent: -9999em; }
-.share-buttons { width: 300px; height: 42px; margin: 35px auto 0px; background: transparent url('../imgs/co-login.png') no-repeat scroll 0% 0%; text-indent: -9999em; cursor: pointer; }
+p.site-name { width: 110px; height: 21px; margin: 17px auto 0px; background: transparent url('../images/lr.png') no-repeat scroll 0px -120px; text-indent: -9999em; }
+.share-buttons { width: 300px; height: 42px; margin: 35px auto 0px; background: transparent url('../images/co-login.png') no-repeat scroll 0% 0%; text-indent: -9999em; cursor: pointer; }
 #renren-button, #qq-button { height: 100%; width: 140px; }
 #renren-button { float: left; }
 #qq-button { float: right; }
@@ -76,8 +76,8 @@ p.ex { width: 270px; margin: 20px auto 0px; }
 a.forget { float: right; vertical-align: bottom; text-decoration: none; }
 a.forget:hover { color: rgb(255, 197, 0); }
 .login-form-container .submit, .reg-form-container .submit { display: block; width: 268px; height: 50px; margin: 40px auto 0px; border-radius: 25px; text-indent: -9999em; cursor: pointer; }
-.login-form-container .submit { background: transparent url('../imgs/lr.png') no-repeat scroll 0px 0px; }
-.reg-form-container .submit { background: transparent url('../imgs/lr.png') no-repeat scroll 0px -151px; }
+.login-form-container .submit { background: transparent url('../images/lr.png') no-repeat scroll 0px 0px; }
+.reg-form-container .submit { background: transparent url('../images/lr.png') no-repeat scroll 0px -151px; }
 .login-form-container .reg, .reg-form-container .log { display: inline-block; margin: 15px 43% 0px; color: rgb(255, 255, 255); font-size: 1.17em; text-decoration: none; }
 .login-form-container .reg:hover, .reg-form-container .log:hover { text-decoration: underline; }
 .avatar { float: left; border: 1px solid rgb(75, 192, 165); padding: 3px; width: 40px; height: 40px; border-radius: 100%; }
@@ -108,7 +108,7 @@ div.center { position: relative; }
 .show { display: block !important; }
 .ershou-details { width: 100%; }
 .ershou-photos-wr { position: relative; width: 540px; height: 540px; float: left; text-align: center; overflow: hidden; }
-.ershou-favorite { display: block; width: 60px; height: 60px; position: absolute; top: 20px; right: 20px; z-index: 10; border-radius: 100%; background: rgba(255, 255, 255, 0.86) url('../imgs/heart.png') no-repeat scroll center 10px; color: rgb(255, 178, 0); font-size: 1.17em; text-align: center; line-height: 85px; vertical-align: middle; text-decoration: none; }
+.ershou-favorite { display: block; width: 60px; height: 60px; position: absolute; top: 20px; right: 20px; z-index: 10; border-radius: 100%; background: rgba(255, 255, 255, 0.86) url('../images/heart.png') no-repeat scroll center 10px; color: rgb(255, 178, 0); font-size: 1.17em; text-align: center; line-height: 85px; vertical-align: middle; text-decoration: none; }
 .ershou-favorite:hover { background-color: rgba(248, 252, 226, 0.86); }
 .bigger-photo-box { width: 100%; height: 100%; overflow: hidden; }
 a.bigger-photo { display: block; width: 100%; height: 100%; overflow: hidden; line-height: 560px; background-color: rgb(247, 247, 247); }
@@ -139,16 +139,16 @@ a.bigger-photo { display: block; width: 100%; height: 100%; overflow: hidden; li
 .ershou-detail li .name { float: left; width: 80px; height: 30px; text-align: right; }
 .name span { display: inline-block; min-width: 30px; padding: 7px 12px; background-color: rgb(75, 192, 165); color: rgb(255, 255, 255); text-align: center; white-space: nowrap; }
 .ershou-detail li .value { line-height: 30px; margin-left: 100px; color: rgb(102, 102, 102); }
-.ershou-detail .value-name { color: rgb(75, 192, 165); font-size: 14px; padding-right: 22px; background-image: url('../imgs/ico_seller.png'); background-repeat: no-repeat; background-position: right 0px; }
+.ershou-detail .value-name { color: rgb(75, 192, 165); font-size: 14px; padding-right: 22px; background-image: url('../images/ico_seller.png'); background-repeat: no-repeat; background-position: right 0px; }
 .ershou-detail .value-name:hover { color: rgb(255, 179, 0); background-position: right -29px; }
 .complain { width: 100%; position: absolute; left: -30px; bottom: 15px; text-align: center; }
 .complain a { color: rgb(153, 153, 153); font-size: 1em; text-decoration: none; }
 .complain a:hover { color: rgb(100, 203, 179); }
-.ershou-desc { margin-top: 20px; padding: 30px 90px; background-color: rgb(255, 255, 255); background-image: url('../imgs/info.png'); background-position: 12px 12px; background-repeat: no-repeat; text-align: left; }
+.ershou-desc { margin-top: 20px; padding: 30px 90px; background-color: rgb(255, 255, 255); background-image: url('../images/info.png'); background-position: 12px 12px; background-repeat: no-repeat; text-align: left; }
 .avatar { width: 40px; height: 40px; border-radius: 100%; float: left; overflow: hidden; }
 .desc { min-height: 50px; color: rgb(102, 102, 102); font-size: 1.17em; line-height: 23px; }
 .comments { position: relative; width: 525px; float: left; padding: 54px 0px 25px 15px; margin-top: 20px; background-color: rgb(255, 255, 255); }
-.comments-title { position: absolute; left: -5px; top: 5px; width: 88px; height: 34px; background: transparent url('../imgs/comment.png') no-repeat scroll 0% 0%; color: rgb(255, 255, 255); font-size: 1.5em; text-indent: -9999em; }
+.comments-title { position: absolute; left: -5px; top: 5px; width: 88px; height: 34px; background: transparent url('../images/comment.png') no-repeat scroll 0% 0%; color: rgb(255, 255, 255); font-size: 1.5em; text-indent: -9999em; }
 .comments-wr { width: 100%; margin-top: 5px; }
 div.comment::after { content: ""; width: 0px; height: 0px; display: block; visibility: hidden; clear: both; }
 div.comment .avatar, .post-comment .avatar { position: relative; width: 40px; height: 40px; border: 1px solid rgb(75, 192, 165); background-color: rgb(255, 255, 255); }
@@ -160,13 +160,13 @@ div.comment .avatar, .post-comment .avatar { position: relative; width: 40px; he
 div.comment .avatar::before, .post-comment .avatar::before { content: ""; display: block; position: absolute; left: 0px; top: 0px; width: 44px; height: 44px; border-radius: 100px; border: 2px solid rgb(255, 255, 255); }
 .rpy-to::before { content: "回复"; display: inline-block; margin: 0px 8px; color: rgb(153, 153, 153); font-size: 1em; }
 .commenting, .commenting-unlogin { position: relative; border: 1px solid rgb(75, 192, 165); margin-right: 45px; margin-left: 60px; }
-.commenting::before, .commenting-unlogin::before { content: ""; display: block; position: absolute; left: -9px; top: -1px; width: 9px; height: 12px; background-image: url('../imgs/commenting-tri.png'); background-repeat: no-repeat; background-color: rgb(254, 254, 254); }
-.commenting-unlogin::before { background-image: url('../imgs/commenting-unlogin-tri.png'); }
+.commenting::before, .commenting-unlogin::before { content: ""; display: block; position: absolute; left: -9px; top: -1px; width: 9px; height: 12px; background-image: url('../images/commenting-tri.png'); background-repeat: no-repeat; background-color: rgb(254, 254, 254); }
+.commenting-unlogin::before { background-image: url('../images/commenting-unlogin-tri.png'); }
 .commenting-unlogin, .tips { display: block; height: 60px; line-height: 60px; font-size: 1em; text-align: center; color: rgb(0, 172, 144); background-color: rgb(246, 249, 249); }
 .comment-input-wr-wr { margin-right: 80px; }
 .comment-input-wr { width: 100%; height: 60px; float: left; }
-.sub-comment, .comment-login { width: 56px; height: 60px; background: transparent url('../imgs/comment-button.png') no-repeat scroll 0% 0%; color: rgb(255, 255, 255); font-size: 1.33em; text-indent: -9999em; float: right; cursor: pointer; }
-.comment-login { background: transparent url('../imgs/comment-login.png') no-repeat scroll 0% 0%; }
+.sub-comment, .comment-login { width: 56px; height: 60px; background: transparent url('../images/comment-button.png') no-repeat scroll 0% 0%; color: rgb(255, 255, 255); font-size: 1.33em; text-indent: -9999em; float: right; cursor: pointer; }
+.comment-login { background: transparent url('../images/comment-login.png') no-repeat scroll 0% 0%; }
 .comments-wr { position: relative; top: -20px; margin-left: 21px; border-left: 1px solid rgb(75, 192, 165); }
 .comment-wr { position: relative; left: -26px; top: 20px; }
 div.comment .avatar, .post-comment .avatar { padding: 3px; }
@@ -182,12 +182,12 @@ div.comment .avatar, .post-comment .avatar { padding: 3px; }
 	.comments { width: 545px; }
 	.concerned-goods { width: 300px; }
 }
-.jiathis_style_32x32 .jiathis_button_qzone .jtico_qzone { background: transparent url('../imgs/goods_share_1.png') no-repeat scroll 0px 0px; }
-.jiathis_style_32x32 .jiathis_button_tsina .jtico_tsina { background: transparent url('../imgs/goods_share_2.png') no-repeat scroll 0px 0px; }
-.jiathis_style_32x32 .jiathis_button_tqq .jtico_tqq { background: transparent url('../imgs/goods_share_3.png') no-repeat scroll 0px 0px; }
-.jiathis_style_32x32 .jiathis_button_weixin .jtico_weixin { background: transparent url('../imgs/goods_share_4.png') no-repeat scroll 0px 0px; }
-.jiathis_style_32x32 .jiathis_button_renren .jtico_renren { background: transparent url('../imgs/goods_share_5.png') no-repeat scroll 0px 0px; }
-#goods_button_more { background: transparent url('../imgs/goods_share_more.png') no-repeat scroll 0px 0px; }
+.jiathis_style_32x32 .jiathis_button_qzone .jtico_qzone { background: transparent url('../images/goods_share_1.png') no-repeat scroll 0px 0px; }
+.jiathis_style_32x32 .jiathis_button_tsina .jtico_tsina { background: transparent url('../images/goods_share_2.png') no-repeat scroll 0px 0px; }
+.jiathis_style_32x32 .jiathis_button_tqq .jtico_tqq { background: transparent url('../images/goods_share_3.png') no-repeat scroll 0px 0px; }
+.jiathis_style_32x32 .jiathis_button_weixin .jtico_weixin { background: transparent url('../images/goods_share_4.png') no-repeat scroll 0px 0px; }
+.jiathis_style_32x32 .jiathis_button_renren .jtico_renren { background: transparent url('../images/goods_share_5.png') no-repeat scroll 0px 0px; }
+#goods_button_more { background: transparent url('../images/goods_share_more.png') no-repeat scroll 0px 0px; }
 .ad-box { margin-left: -20px; position: relative; }
 .comment-right { float: right; }
 .want-commenting::before { background-color: rgb(254, 254, 254); }
@@ -196,34 +196,34 @@ div.comment .avatar, .post-comment .avatar { padding: 3px; }
 /* ::::: http://hust.2shoujie.com/resource/css/fancybox-1.3.1.css?v=201506100001 ::::: */
 
 #fancybox-loading { position: fixed; top: 50%; left: 50%; height: 40px; width: 40px; margin-top: -20px; margin-left: -20px; cursor: pointer; overflow: hidden; z-index: 1104; display: none; }
-#fancybox-loading div { position: absolute; top: 0px; left: 0px; width: 40px; height: 480px; background-image: url('../imgs/fancybox.png'); }
+#fancybox-loading div { position: absolute; top: 0px; left: 0px; width: 40px; height: 480px; background-image: url('../images/fancybox.png'); }
 #fancybox-overlay { position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; background: rgb(0, 0, 0) none repeat scroll 0% 0%; z-index: 1100; display: none; }
 #fancybox-tmp { padding: 0px; margin: 0px; border: 0px none; overflow: auto; display: none; }
 #fancybox-wrap { position: absolute; top: 0px; left: 0px; margin: 0px; padding: 20px; z-index: 1101; display: none; }
 #fancybox-outer { position: relative; width: 100%; height: 100%; background: rgb(255, 255, 255) none repeat scroll 0% 0%; }
 #fancybox-inner { position: absolute; top: 0px; left: 0px; width: 1px; height: 1px; padding: 0px; margin: 0px; outline: medium none; overflow: hidden; }
-#fancybox-close { position: absolute; top: -15px; right: -15px; width: 30px; height: 30px; background-image: url('../imgs/fancybox.png'); background-position: -40px 0px; cursor: pointer; z-index: 1103; display: none; }
-#fancybox-left, #fancybox-right { position: absolute; bottom: 0px; height: 100%; width: 35%; cursor: pointer; outline: medium none; background-image: url('../imgs/blank.gif'); z-index: 1102; display: none; }
+#fancybox-close { position: absolute; top: -15px; right: -15px; width: 30px; height: 30px; background-image: url('../images/fancybox.png'); background-position: -40px 0px; cursor: pointer; z-index: 1103; display: none; }
+#fancybox-left, #fancybox-right { position: absolute; bottom: 0px; height: 100%; width: 35%; cursor: pointer; outline: medium none; background-image: url('../images/blank.gif'); z-index: 1102; display: none; }
 #fancybox-left { left: 0px; }
 #fancybox-right { right: 0px; }
 #fancybox-left-ico, #fancybox-right-ico { position: absolute; top: 50%; left: -9999px; width: 30px; height: 30px; margin-top: -15px; cursor: pointer; z-index: 1102; display: block; }
-#fancybox-left-ico { background-image: url('../imgs/fancybox.png'); background-position: -40px -30px; }
-#fancybox-right-ico { background-image: url('../imgs/fancybox.png'); background-position: -40px -60px; }
+#fancybox-left-ico { background-image: url('../images/fancybox.png'); background-position: -40px -30px; }
+#fancybox-right-ico { background-image: url('../images/fancybox.png'); background-position: -40px -60px; }
 #fancybox-left:hover, #fancybox-right:hover { visibility: visible; }
 #fancybox-left:hover span { left: 20px; }
 #fancybox-right:hover span { left: auto; right: 20px; }
 .fancy-bg { position: absolute; padding: 0px; margin: 0px; border: 0px none; width: 20px; height: 20px; z-index: 1001; }
-#fancy-bg-n { top: -20px; left: 0px; width: 100%; background-image: url('../imgs/fancybox-x.png'); }
-#fancy-bg-ne { top: -20px; right: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -162px; }
-#fancy-bg-e { top: 0px; right: -20px; height: 100%; background-image: url('../imgs/fancybox-y.png'); background-position: -20px 0px; }
-#fancy-bg-se { bottom: -20px; right: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -182px; }
-#fancy-bg-s { bottom: -20px; left: 0px; width: 100%; background-image: url('../imgs/fancybox-x.png'); background-position: 0px -20px; }
-#fancy-bg-sw { bottom: -20px; left: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -142px; }
-#fancy-bg-w { top: 0px; left: -20px; height: 100%; background-image: url('../imgs/fancybox-y.png'); }
-#fancy-bg-nw { top: -20px; left: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -122px; }
+#fancy-bg-n { top: -20px; left: 0px; width: 100%; background-image: url('../images/fancybox-x.png'); }
+#fancy-bg-ne { top: -20px; right: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -162px; }
+#fancy-bg-e { top: 0px; right: -20px; height: 100%; background-image: url('../images/fancybox-y.png'); background-position: -20px 0px; }
+#fancy-bg-se { bottom: -20px; right: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -182px; }
+#fancy-bg-s { bottom: -20px; left: 0px; width: 100%; background-image: url('../images/fancybox-x.png'); background-position: 0px -20px; }
+#fancy-bg-sw { bottom: -20px; left: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -142px; }
+#fancy-bg-w { top: 0px; left: -20px; height: 100%; background-image: url('../images/fancybox-y.png'); }
+#fancy-bg-nw { top: -20px; left: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -122px; }
 /* ::::: http://v3.jiathis.com/code/css/jiathis_share.css ::::: */
 
-.jiathis_style_32x32 .jtico { text-align: left; overflow: hidden; display: block !important; height: 32px !important; line-height: 32px !important; padding-left: 36px !important; background: transparent url('../imgs/jiathis_ico_32x32.png') no-repeat scroll left center; cursor: pointer; }
+.jiathis_style_32x32 .jtico { text-align: left; overflow: hidden; display: block !important; height: 32px !important; line-height: 32px !important; padding-left: 36px !important; background: transparent url('../images/jiathis_ico_32x32.png') no-repeat scroll left center; cursor: pointer; }
 .jiathis_style_32x32 .jtico:hover { opacity: 0.8; }
 .jiathis_style_32x32 .jiathis_txt { float: left; font-size: 22px; text-decoration: none; line-height: 32px !important; }
 .jiathis_style_32x32 .jiathis_separator { display: block; float: left; margin: 0px 5px; line-height: 32px !important; }
