--- a/WebContent/css/wanted_list.css
+++ b/WebContent/css/wanted_list.css
@@ -35,7 +35,7 @@ header { width: 100%; min-width: 960px; height: 120px; position: fixed; left: 0p
 .hots { margin: 0px 8px; color: rgb(133, 142, 143); text-decoration: none; }
 .hots:hover { color: rgb(237, 78, 81); }
 .log-reg { position: absolute; right: 0px; top: 40px; }
-footer { padding: 0px 0px 20px; background: rgb(247, 250, 249) url('../imgs/footer-bg.png') no-repeat scroll center bottom; }
+footer { padding: 0px 0px 20px; background: rgb(247, 250, 249) url('../images/footer-bg.png') no-repeat scroll center bottom; }
 .footer-tri { display: block; width: 100%; margin-bottom: 25px; }
 .links-wr li::before { content: "/"; font-size: 1.33em; color: rgb(102, 102, 102); line-height: 16px; position: absolute; left: 0px; bottom: -1px; }
 .links-wr li.first::before { content: ""; }
@@ -51,7 +51,7 @@ nav a { display: block; height: 100%; color: inherit; font-size: inherit; text-d
 .blank-head, .area { transition: all 0.2s linear 0s; font-size: 12px; }
 .blank-head { height: 120px; }
 .area > div { width: 100%; height: 100%; text-align: center; }
-.area i { display: inline-block; margin-top: 15px; width: 24px; height: 34px; background-image: url('../imgs/location.png'); }
+.area i { display: inline-block; margin-top: 15px; width: 24px; height: 34px; background-image: url('../images/location.png'); }
 #college { display: table; height: 42px; width: 100%; text-align: center; line-height: 1.1em; border: 0px none; color: rgb(255, 178, 0); font-size: 14px; font-weight: bold; }
 #college span { display: table-cell; vertical-align: middle; }
 .switch { display: inline-block; margin-bottom: 10px; border-bottom: 1px solid rgb(68, 193, 165); font-size: 12px; line-height: 15px; color: rgb(68, 193, 165); text-align: center; height: 16px; }
@@ -68,9 +68,9 @@ li.catg .sub-nav a:hover { color: rgb(255, 198, 0); }
 .area .switch:hover { color: rgb(237, 78, 81); border-bottom-color: rgb(237, 78, 81); }
 li.catg:hover a, li.area:hover > div { box-shadow: 0px 0px 7px rgba(23, 190, 160, 0.3) inset; }
 aside { width: 140px; position: absolute; top: 170px; right: 20px; }
-.release-button { display: block; width: 100%; height: 52px; background-image: url('../imgs/release-button-2.png'); text-indent: -9999em; }
-.release-button:hover { background-image: url('../imgs/release-button-1.png'); }
-.helped { width: 146px; height: 166px; margin: 30px 0px 0px -3px; background-image: url('../imgs/helped.png'); background-repeat: no-repeat; text-align: center; }
+.release-button { display: block; width: 100%; height: 52px; background-image: url('../images/release-button-2.png'); text-indent: -9999em; }
+.release-button:hover { background-image: url('../images/release-button-1.png'); }
+.helped { width: 146px; height: 166px; margin: 30px 0px 0px -3px; background-image: url('../images/helped.png'); background-repeat: no-repeat; text-align: center; }
 .helpers { color: rgb(0, 173, 144); font-family: impact; font-size: 3.17em; line-height: 155px; vertical-align: middle; }
 .qrcode-wr { width: 148px; margin: 30px 0px 0px -3px; }
 .qrcode-wr img { width: 100%; height: auto; }
@@ -100,8 +100,8 @@ aside { width: 140px; position: absolute; top: 170px; right: 20px; }
 .login-header, .reg-header { width: 100%; padding: 30px 0px; margin: 0px auto; background-color: rgb(63, 73, 91); }
 .reg-header { padding-bottom: 40px; }
 .login-logo { display: block; width: 80px; height: 80px; margin: 0px auto; }
-p.site-name { width: 110px; height: 21px; margin: 17px auto 0px; background: transparent url('../imgs/lr.png') no-repeat scroll 0px -120px; text-indent: -9999em; }
-.share-buttons { width: 300px; height: 42px; margin: 35px auto 0px; background: transparent url('../imgs/co-login.png') no-repeat scroll 0% 0%; text-indent: -9999em; cursor: pointer; }
+p.site-name { width: 110px; height: 21px; margin: 17px auto 0px; background: transparent url('../images/lr.png') no-repeat scroll 0px -120px; text-indent: -9999em; }
+.share-buttons { width: 300px; height: 42px; margin: 35px auto 0px; background: transparent url('../images/co-login.png') no-repeat scroll 0% 0%; text-indent: -9999em; cursor: pointer; }
 #renren-button, #qq-button { height: 100%; width: 140px; }
 #renren-button { float: left; }
 #qq-button { float: right; }
@@ -118,8 +118,8 @@ p.ex { width: 270px; margin: 20px auto 0px; }
 a.forget { float: right; vertical-align: bottom; text-decoration: none; }
 a.forget:hover { color: rgb(255, 197, 0); }
 .login-form-container .submit, .reg-form-container .submit { display: block; width: 268px; height: 50px; margin: 40px auto 0px; border-radius: 25px; text-indent: -9999em; cursor: pointer; }
-.login-form-container .submit { background: transparent url('../imgs/lr.png') no-repeat scroll 0px 0px; }
-.reg-form-container .submit { background: transparent url('../imgs/lr.png') no-repeat scroll 0px -151px; }
+.login-form-container .submit { background: transparent url('../images/lr.png') no-repeat scroll 0px 0px; }
+.reg-form-container .submit { background: transparent url('../images/lr.png') no-repeat scroll 0px -151px; }
 .login-form-container .reg, .reg-form-container .log { display: inline-block; margin: 15px 43% 0px; color: rgb(255, 255, 255); font-size: 1.17em; text-decoration: none; }
 .login-form-container .reg:hover, .reg-form-container .log:hover { text-decoration: underline; }
 #have_login { height: 50px; }
@@ -141,7 +141,7 @@ div.center { position: relative; }
 
 .main { width: 640px; padding: 20px 0px 45px; }
 .items::after { content: ""; display: inline-block; width: 100%; }
-.info .price::before { content: "£¤"; }
+.info .price::before { content: "ï¿½ï¿½"; }
 @media screen and (min-width: 1280px) {
 	.main { width: 840px; }
 }
@@ -157,23 +157,23 @@ div.center { position: relative; }
 .notice-cont-title::after { content: ""; display: inline-block; width: 34px; height: 0px; border-top: 1px solid rgb(204, 204, 204); margin: 0px 0px 3px 15px; }
 .pop-tip { position: fixed; z-index: 999; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); top: 0px; left: 0px; }
 .pop-tip .pop-tip-area { position: absolute; width: 340px; height: 120px; top: 50%; left: 50%; margin-left: -170px; margin-top: -60px; background-color: rgb(255, 255, 255); text-align: center; }
-.pop-tip .pop-tip-txt { display: inline-block; margin-top: 45px; height: 30px; line-height: 30px; padding-left: 42px; background: transparent url('../imgs/identify_suc.png') no-repeat scroll left center; font-size: 20px; color: rgb(26, 188, 156); }
+.pop-tip .pop-tip-txt { display: inline-block; margin-top: 45px; height: 30px; line-height: 30px; padding-left: 42px; background: transparent url('../images/identify_suc.png') no-repeat scroll left center; font-size: 20px; color: rgb(26, 188, 156); }
 /* ::::: http://hust.2shoujie.com/resource/css/detail.css?v=201506100001 ::::: */
 
 .main { width: 860px; padding-top: 50px; }
 .hide { display: none !important; }
-.ershou-price::before { content: "£¤"; font-size: 1em; color: inherit; vertical-align: middle; }
+.ershou-price::before { content: "ï¿½ï¿½"; font-size: 1em; color: inherit; vertical-align: middle; }
 .avatar { width: 40px; height: 40px; border-radius: 100%; float: left; overflow: hidden; }
 div.comment::after { content: ""; width: 0px; height: 0px; display: block; visibility: hidden; clear: both; }
 .loader-quart::after { content: ""; position: absolute; top: -4px; right: -4px; bottom: -4px; left: -4px; border-radius: 50%; border-width: 4px; border-style: solid; border-color: rgb(204, 204, 204) rgb(245, 245, 245) rgb(245, 245, 245); -moz-border-top-colors: none; -moz-border-right-colors: none; -moz-border-bottom-colors: none; -moz-border-left-colors: none; border-image: none; animation: 1s linear 0s normal none infinite running spin; }
 div.comment .avatar::before, .post-comment .avatar::before { content: ""; display: block; position: absolute; left: 0px; top: 0px; width: 44px; height: 44px; border-radius: 100px; border: 2px solid rgb(255, 255, 255); }
-.rpy-to::before { content: "»Ø¸´"; display: inline-block; margin: 0px 8px; color: rgb(153, 153, 153); font-size: 1em; }
-.commenting::before, .commenting-unlogin::before { content: ""; display: block; position: absolute; left: -9px; top: -1px; width: 9px; height: 12px; background-image: url('../imgs/commenting-tri.png'); background-repeat: no-repeat; background-color: rgb(254, 254, 254); }
-.commenting-unlogin::before { background-image: url('../imgs/commenting-unlogin-tri.png'); }
+.rpy-to::before { content: "ï¿½Ø¸ï¿½"; display: inline-block; margin: 0px 8px; color: rgb(153, 153, 153); font-size: 1em; }
+.commenting::before, .commenting-unlogin::before { content: ""; display: block; position: absolute; left: -9px; top: -1px; width: 9px; height: 12px; background-image: url('../images/commenting-tri.png'); background-repeat: no-repeat; background-color: rgb(254, 254, 254); }
+.commenting-unlogin::before { background-image: url('../images/commenting-unlogin-tri.png'); }
 @media screen and (min-width: 1280px) {
 	.main { width: 920px; }
 }
-.want-title { width: 798px; height: 40px; background: transparent url('../imgs/want-title.png') no-repeat scroll 0% 0%; margin: 0px auto; }
+.want-title { width: 798px; height: 40px; background: transparent url('../images/want-title.png') no-repeat scroll 0% 0%; margin: 0px auto; }
 .want-commenting::before { background-color: rgb(254, 254, 254); }
 .want-list { margin-top: 30px; }
 .want-list > li { margin-bottom: 20px; }
@@ -190,52 +190,52 @@ div.comment .avatar::before, .post-comment .avatar::before { content: ""; displa
 
 .want-list .want-contact { margin-top: 14px; font-size: 14px; height: 18px; }
 .want-list .want-contact > span { display: inline-block; }
-.want-list .want-cont { color: rgb(75, 191, 165); padding-left: 81px; height: 18px; background-image: url('../imgs/want_contact.png'); 
+.want-list .want-cont { color: rgb(75, 191, 165); padding-left: 81px; height: 18px; background-image: url('../images/want_contact.png');
 background-repeat: no-repeat; background-position: left 1px; cursor: pointer; margin-left: 15px; }
 
-.want-list .want-person { color: rgb(133, 141, 142); display: inline-block; font-size: 14px; padding-left: 20px; background: transparent url('../imgs/ico-per.png') no-repeat scroll left center; margin-right: 10px; height: 18px; line-height: 18px; float: left; }
-.want-list .want-person:hover { color: rgb(75, 191, 165); background-image: url('../imgs/ico-per-hover.png'); }
-.want-tel { display: none; margin-left: 10px; padding-left: 12px; background: transparent url('../imgs/icon_arr.png') no-repeat scroll left center; }
+.want-list .want-person { color: rgb(133, 141, 142); display: inline-block; font-size: 14px; padding-left: 20px; background: transparent url('../images/ico-per.png') no-repeat scroll left center; margin-right: 10px; height: 18px; line-height: 18px; float: left; }
+.want-list .want-person:hover { color: rgb(75, 191, 165); background-image: url('../images/ico-per-hover.png'); }
+.want-tel { display: none; margin-left: 10px; padding-left: 12px; background: transparent url('../images/icon_arr.png') no-repeat scroll left center; }
 .want-com { display: block; position: absolute; right: 20px; bottom: 20px; font-size: 13px; color: rgb(75, 192, 165); border: 1px solid rgb(75, 192, 165); border-radius: 15px; width: 106px; height: 30px; line-height: 30px; text-align: center; }
-.want-com .want-com-txt { padding-left: 24px; background: transparent url('../imgs/ico_comment.png') no-repeat scroll left center; display: inline-block; }
+.want-com .want-com-txt { padding-left: 24px; background: transparent url('../images/ico_comment.png') no-repeat scroll left center; display: inline-block; }
 .want-com:hover { color: rgb(255, 197, 0); border-color: rgb(255, 197, 0); }
-.want-com:hover .want-com-txt { background: transparent url('../imgs/ico_ycom.png') no-repeat scroll left center; }
+.want-com:hover .want-com-txt { background: transparent url('../images/ico_ycom.png') no-repeat scroll left center; }
 .want-no { background-color: rgb(255, 255, 255); padding: 50px 0px 40px; margin-top: 30px; }
-.want-no-logo { width: 400px; height: 213px; margin: 0px auto; background: transparent url('../imgs/want_no.png') no-repeat scroll 0% 0%; }
+.want-no-logo { width: 400px; height: 213px; margin: 0px auto; background: transparent url('../images/want_no.png') no-repeat scroll 0% 0%; }
 .mr10 { margin-right: 10px; }
-.qiugou-button { background-image: url('../imgs/qiugou-button-2.png'); }
-.qiugou-button:hover { background-image: url('../imgs/qiugou-button-1.png'); }
+.qiugou-button { background-image: url('../images/qiugou-button-2.png'); }
+.qiugou-button:hover { background-image: url('../images/qiugou-button-1.png'); }
 .wrap-no-btn { margin-top: 30px; text-align: center; }
 .wrap-no-btn > a { display: inline-block; width: 164px; height: 40px; border: 1px solid rgb(239, 199, 94); line-height: 40px; text-align: center; color: rgb(239, 199, 94); font-size: 20px; border-radius: 20px; }
 .wrap-no-btn > a:hover { color: rgb(61, 179, 158); border-color: rgb(61, 179, 158); }
 .pop-tip { position: fixed; z-index: 999; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.65); top: 0px; left: 0px; }
 .pop-tip .pop-tip-area { position: absolute; width: 340px; height: 120px; top: 50%; left: 50%; margin-left: -170px; margin-top: -60px; background-color: rgb(255, 255, 255); text-align: center; }
-.pop-tip .pop-tip-txt { display: inline-block; margin-top: 45px; height: 30px; line-height: 30px; padding-left: 42px; background: transparent url('../imgs/identify_suc.png') no-repeat scroll left center; font-size: 20px; color: rgb(26, 188, 156); }
+.pop-tip .pop-tip-txt { display: inline-block; margin-top: 45px; height: 30px; line-height: 30px; padding-left: 42px; background: transparent url('../images/identify_suc.png') no-repeat scroll left center; font-size: 20px; color: rgb(26, 188, 156); }
 /* ::::: http://hust.2shoujie.com/resource/css/fancybox-1.3.1.css?v=201506100001 ::::: */
 
 #fancybox-loading { position: fixed; top: 50%; left: 50%; height: 40px; width: 40px; margin-top: -20px; margin-left: -20px; cursor: pointer; overflow: hidden; z-index: 1104; display: none; }
-#fancybox-loading div { position: absolute; top: 0px; left: 0px; width: 40px; height: 480px; background-image: url('../imgs/fancybox.png'); }
+#fancybox-loading div { position: absolute; top: 0px; left: 0px; width: 40px; height: 480px; background-image: url('../images/fancybox.png'); }
 #fancybox-overlay { position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; background: rgb(0, 0, 0) none repeat scroll 0% 0%; z-index: 1100; display: none; }
 #fancybox-tmp { padding: 0px; margin: 0px; border: 0px none; overflow: auto; display: none; }
 #fancybox-wrap { position: absolute; top: 0px; left: 0px; margin: 0px; padding: 20px; z-index: 1101; display: none; }
 #fancybox-outer { position: relative; width: 100%; height: 100%; background: rgb(255, 255, 255) none repeat scroll 0% 0%; }
 #fancybox-inner { position: absolute; top: 0px; left: 0px; width: 1px; height: 1px; padding: 0px; margin: 0px; outline: medium none; overflow: hidden; }
-#fancybox-close { position: absolute; top: -15px; right: -15px; width: 30px; height: 30px; background-image: url('../imgs/fancybox.png'); background-position: -40px 0px; cursor: pointer; z-index: 1103; display: none; }
-#fancybox-left, #fancybox-right { position: absolute; bottom: 0px; height: 100%; width: 35%; cursor: pointer; outline: medium none; background-image: url('../imgs/blank.gif'); z-index: 1102; display: none; }
+#fancybox-close { position: absolute; top: -15px; right: -15px; width: 30px; height: 30px; background-image: url('../images/fancybox.png'); background-position: -40px 0px; cursor: pointer; z-index: 1103; display: none; }
+#fancybox-left, #fancybox-right { position: absolute; bottom: 0px; height: 100%; width: 35%; cursor: pointer; outline: medium none; background-image: url('../images/blank.gif'); z-index: 1102; display: none; }
 #fancybox-left { left: 0px; }
 #fancybox-right { right: 0px; }
 #fancybox-left-ico, #fancybox-right-ico { position: absolute; top: 50%; left: -9999px; width: 30px; height: 30px; margin-top: -15px; cursor: pointer; z-index: 1102; display: block; }
-#fancybox-left-ico { background-image: url('../imgs/fancybox.png'); background-position: -40px -30px; }
-#fancybox-right-ico { background-image: url('../imgs/fancybox.png'); background-position: -40px -60px; }
+#fancybox-left-ico { background-image: url('../images/fancybox.png'); background-position: -40px -30px; }
+#fancybox-right-ico { background-image: url('../images/fancybox.png'); background-position: -40px -60px; }
 #fancybox-left:hover, #fancybox-right:hover { visibility: visible; }
 #fancybox-left:hover span { left: 20px; }
 #fancybox-right:hover span { left: auto; right: 20px; }
 .fancy-bg { position: absolute; padding: 0px; margin: 0px; border: 0px none; width: 20px; height: 20px; z-index: 1001; }
-#fancy-bg-n { top: -20px; left: 0px; width: 100%; background-image: url('../imgs/fancybox-x.png'); }
-#fancy-bg-ne { top: -20px; right: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -162px; }
-#fancy-bg-e { top: 0px; right: -20px; height: 100%; background-image: url('../imgs/fancybox-y.png'); background-position: -20px 0px; }
-#fancy-bg-se { bottom: -20px; right: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -182px; }
-#fancy-bg-s { bottom: -20px; left: 0px; width: 100%; background-image: url('../imgs/fancybox-x.png'); background-position: 0px -20px; }
-#fancy-bg-sw { bottom: -20px; left: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -142px; }
-#fancy-bg-w { top: 0px; left: -20px; height: 100%; background-image: url('../imgs/fancybox-y.png'); }
-#fancy-bg-nw { top: -20px; left: -20px; background-image: url('../imgs/fancybox.png'); background-position: -40px -122px; }
+#fancy-bg-n { top: -20px; left: 0px; width: 100%; background-image: url('../images/fancybox-x.png'); }
+#fancy-bg-ne { top: -20px; right: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -162px; }
+#fancy-bg-e { top: 0px; right: -20px; height: 100%; background-image: url('../images/fancybox-y.png'); background-position: -20px 0px; }
+#fancy-bg-se { bottom: -20px; right: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -182px; }
+#fancy-bg-s { bottom: -20px; left: 0px; width: 100%; background-image: url('../images/fancybox-x.png'); background-position: 0px -20px; }
+#fancy-bg-sw { bottom: -20px; left: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -142px; }
+#fancy-bg-w { top: 0px; left: -20px; height: 100%; background-image: url('../images/fancybox-y.png'); }
+#fancy-bg-nw { top: -20px; left: -20px; background-image: url('../images/fancybox.png'); background-position: -40px -122px; }
