--- a/WebContent/css/goods_detail.css
+++ b/WebContent/css/goods_detail.css
@@ -112,7 +112,7 @@ div.center { position: relative; }
 .ershou-favorite:hover { background-color: rgba(248, 252, 226, 0.86); }
 .bigger-photo-box { width: 100%; height: 100%; overflow: hidden; }
 a.bigger-photo { display: block; width: 100%; height: 100%; overflow: hidden; line-height: 560px; background-color: rgb(247, 247, 247); }
-.ershou-photos-wr .bigger{ min-width: 100%; min-height: 100%; vertical-align: middle;}
+.ershou-photos-wr .bigger{ width: 560px;height: 560px; vertical-align: middle;}
 .ershou-photo-slide-layer { background: rgb(255, 255, 255) none repeat scroll 0% 0%; position: absolute; bottom: 0px; z-index: 50; width: 100%; height: 80px; opacity: 0.5; }
 .ershou-photo-slide { position: absolute; bottom: 0px; z-index: 99; width: 100%; height: 80px; text-align: center; }
 .ershou-small-photos { display: inline-block; height: 80px; width: 70px; text-align: center; line-height: 80px; }
