--- a/WebContent/css/user_center.css
+++ b/WebContent/css/user_center.css
@@ -147,8 +147,9 @@ div.center { position: relative; }
 .moxie-shim > input { font-size: 0px !important; cursor: pointer; }
 .loading { margin-top: 170px; }
 .top { margin-top: 50px; height: 220px; }
-#user_photo { position: relative; background: rgb(246, 249, 249) none repeat scroll 0% 0%; padding: 20px; width: 180px; height: 180px; }
+#user_photo { position: relative; background: rgb(246, 249, 249) none repeat scroll 0% 0%; width: 180px; height: 180px;}
 #user_photo img { width: 180px; height: 180px; border-radius: 100%; cursor: pointer; }
+#change_photo{margin-top: -180px;}
 .head-img-box { width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3); position: fixed; z-index: 99999; top: 0px; left: 0px; }
 .wrap-head-img { background-color: rgb(255, 255, 255); position: absolute; top: 50%; left: 50%; margin-left: -270px; margin-top: -270px; border-top: 2px solid rgb(0, 172, 144); border-radius: 3px; width: 540px; height: 540px; }
 .wrap-head-img .head-title { border-bottom: 1px solid rgb(242, 242, 245); padding: 0px 0px 0px 16px; color: rgb(51, 51, 51); font-size: 14px; line-height: 38px; }
@@ -184,6 +185,7 @@ div.center { position: relative; }
 #my_info li { list-style: outside none none; }
 #account_info h2, #base_info h2 { border-bottom: 1px solid rgb(0, 172, 144); font: 16px "Microsoft YaHei"; color: rgb(0, 172, 144); padding-bottom: 7px; width: 480px; margin: 20px; }
 .infos { color: rgb(68, 68, 68); font: 14px "Microsoft YaHei"; margin: 10px 0px 0px 20px; }
+.infos li{position: relative;}
 #my_info .infos li { display: inline-block; width: 60px; text-align: left; line-height: 30px; vertical-align: middle; }
 #my_info .infos li.right_info { display: inline; text-align: left; margin-left: 30px; }
 #my_info .right_info span { display: inline; }
